add weibo share button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
     {{ content }}
   </article>
 
+  <wb:share-button addition="number" type="button" ralateUid="2495973364"></wb:share-button>
 </div>
 
 {% if page.comments %}{% include disqus.html %}{% endif %}
