page add share button

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,4 +11,8 @@ layout: default
     {{ content }}
   </article>
 
+  <wb:share-button addition="text" type="button" ralateUid="2495973364"></wb:share-button>
+  <a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-hashtags="UPYUN">Tweet</a>
+
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </div>
