--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -130,6 +130,7 @@ code {
     font-size: 15px;
     border: 1px solid $grey-color-light;
     border-radius: 3px;
+    background-color: #eef;
 }
 
 code {
@@ -139,7 +140,6 @@ code {
 pre {
     padding: 8px 12px;
     overflow-x: scroll;
-    background: #f7f7f7;
 
     > code {
         border: 0;
