--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html xmlns:wb="http://open.weibo.com/wb">
 
   <head>
+    <meta property="wb:webmaster" content="f210bc77229c2782" />
     {% include head.html %}
   </head>
 
