--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,4 +17,6 @@
     </div>
   </nav>
 
+<script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>
+
 </header>
