fix weibo share button

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ bodyclass: single
     {{ content }}
 
     <div class="share">
-      <wb:share-button appkey="350720329" addition="text" type="button" ralateUid="2495973364"></wb:share-button>
+      <wb:share-button id="wb_share_button" appkey="350720329" addition="text" type="button" ralateUid="2495973364"></wb:share-button>
       <script type="text/javascript">
         var wbbtn = document.getElementById("wb_share_button");
         wbbtn.title = document.title+"%0D"+document.location.href+"%0D";
