--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ bodyclass: single
       <wb:share-button id="wb_share_button" appkey="350720329" addition="text" type="button" ralateUid="2495973364"></wb:share-button>
       <script type="text/javascript">
         var wbbtn = document.getElementById("wb_share_button");
-        wbbtn.title = document.title+"%0D"+document.location.href+"%0D";
+        wbbtn.title = document.title+" "+document.location.href+" ";
       </script>
       <a href="https://twitter.com/share" class="twitter-share-button" data-size="large" data-hashtags="UPYUN">Tweet</a>
 
